--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json", 
+    "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json"
   },
@@ -20,10 +21,14 @@
   "author": "Mukesh Rawat",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.2.4",
+    "@types/jest": "^26.0.22",
+    "jest": "^26.6.3",
+    "codecov": "^3.8.1",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.2.4"
   },
   "files": [
     "lib/**/*"
