--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   "author": "Mukesh Rawat",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.22",
-    "jest": "^26.6.3",
+    "axios": "^0.21.1",
     "codecov": "^3.8.1",
+    "http-errors": "^1.8.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.4"
